// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart - Demo Area fill 1`] = `
<div class="md-example-child md-example-chart-child"><svg viewBox="0 0 112 64" class="md-chart">
    <defs>
      <linearGradient id="path-fill-gradient-#5e64ff" x1="0" x2="0" y1="0" y2="1">
        <stop offset="0%" stop-opacity="0.4" style="stop-color:#5e64ff;"></stop>
        <stop offset="50%" stop-opacity="0.3" style="stop-color:#5e64ff;"></stop>
        <stop offset="100%" stop-opacity="0.1" style="stop-color:#5e64ff;"></stop>
      </linearGradient>
    </defs>
    <g transform="translate(9.6, 3.2)" class="md-chart-graph">
      <g class="md-chart-axis-y">
        <g transform="translate(0, 0)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">60%</text>
        </g>
        <g transform="translate(0, 10.559999999999999)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">50%</text>
        </g>
        <g transform="translate(0, 21.119999999999997)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">40%</text>
        </g>
        <g transform="translate(0, 31.679999999999996)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">30%</text>
        </g>
        <g transform="translate(0, 42.239999999999995)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">20%</text>
        </g>
        <g transform="translate(0, 52.8)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">0%</text>
        </g>
      </g>
      <g transform="translate(0, 52.8)" class="md-chart-axis-x">
        <g transform="translate(0, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周一</text>
        </g>
        <g transform="translate(16.533333333333335, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周二</text>
        </g>
        <g transform="translate(33.06666666666667, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周三</text>
        </g>
        <g transform="translate(49.60000000000001, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周四</text>
        </g>
        <g transform="translate(66.13333333333334, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周五</text>
        </g>
        <g transform="translate(82.66666666666667, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周六</text>
        </g>
        <g transform="translate(99.20000000000002, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周日</text>
        </g>
      </g>
      <g class="md-chart-paths">
        <path d="M0,48.576 L8.266666666666667,44.879999999999995 L16.533333333333335,42.239999999999995 L24.800000000000004,39.071999999999996 L33.06666666666667,42.239999999999995 L41.333333333333336,31.679999999999996 L49.60000000000001,29.567999999999994 L57.866666666666674,23.232 L66.13333333333334,25.343999999999998 L74.4,21.119999999999997 L82.66666666666667,10.559999999999999 L90.93333333333334,5.279999999999999 L99.20000000000002,8.447999999999997" class="md-chart-path" style="fill:none;stroke:#5e64ff;stroke-width:1;"></path>
        <path d="M0,52.8 L0,48.576 L8.266666666666667,44.879999999999995 L16.533333333333335,42.239999999999995 L24.800000000000004,39.071999999999996 L33.06666666666667,42.239999999999995 L41.333333333333336,31.679999999999996 L49.60000000000001,29.567999999999994 L57.866666666666674,23.232 L66.13333333333334,25.343999999999998 L74.4,21.119999999999997 L82.66666666666667,10.559999999999999 L90.93333333333334,5.279999999999999 L99.20000000000002,8.447999999999997 L99.20000000000002,52.8" class="md-chart-path-area" style="fill:url(#path-fill-gradient-#5e64ff);stroke:none;"></path>
      </g>
    </g>
  </svg></div>
`;

exports[`Chart - Demo Gradient fold line 1`] = `
<div class="md-example-child md-example-chart-child"><svg viewBox="0 0 112 64" class="md-chart">
    <defs>
      <linearGradient id="path-fill-gradient-#5e64ff" x1="0" x2="0" y1="0" y2="1">
        <stop offset="0%" stop-opacity="0.4" style="stop-color:#5e64ff;"></stop>
        <stop offset="50%" stop-opacity="0.3" style="stop-color:#5e64ff;"></stop>
        <stop offset="100%" stop-opacity="0.1" style="stop-color:#5e64ff;"></stop>
      </linearGradient>
    </defs>
    <g transform="translate(9.6, 3.2)" class="md-chart-graph">
      <g class="md-chart-axis-y">
        <g transform="translate(0, 0)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">60%</text>
        </g>
        <g transform="translate(0, 10.559999999999999)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">50%</text>
        </g>
        <g transform="translate(0, 21.119999999999997)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">40%</text>
        </g>
        <g transform="translate(0, 31.679999999999996)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">30%</text>
        </g>
        <g transform="translate(0, 42.239999999999995)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">20%</text>
        </g>
        <g transform="translate(0, 52.8)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">0%</text>
        </g>
      </g>
      <g transform="translate(0, 52.8)" class="md-chart-axis-x">
        <g transform="translate(0, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周一</text>
        </g>
        <g transform="translate(16.533333333333335, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周二</text>
        </g>
        <g transform="translate(33.06666666666667, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周三</text>
        </g>
        <g transform="translate(49.60000000000001, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周四</text>
        </g>
        <g transform="translate(66.13333333333334, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周五</text>
        </g>
        <g transform="translate(82.66666666666667, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周六</text>
        </g>
        <g transform="translate(99.20000000000002, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周日</text>
        </g>
      </g>
      <g class="md-chart-paths">
        <path d="M0,48.576 L8.266666666666667,44.879999999999995 L16.533333333333335,42.239999999999995 L24.800000000000004,39.071999999999996 L33.06666666666667,42.239999999999995 L41.333333333333336,31.679999999999996 L49.60000000000001,29.567999999999994 L57.866666666666674,23.232 L66.13333333333334,25.343999999999998 L74.4,21.119999999999997 L82.66666666666667,10.559999999999999 L90.93333333333334,5.279999999999999 L99.20000000000002,8.447999999999997" class="md-chart-path" style="fill:none;stroke:url(#path-fill-gradient-#5e64ff);stroke-width:1;"></path>
        <!---->
      </g>
    </g>
  </svg></div>
`;

exports[`Chart - Demo Multiple fold lines 1`] = `
<div class="md-example-child md-example-chart-child"><svg viewBox="0 0 112 64" class="md-chart">
    <defs>
      <linearGradient id="path-fill-gradient-#5e64ff" x1="0" x2="0" y1="0" y2="1">
        <stop offset="0%" stop-opacity="0.4" style="stop-color:#5e64ff;"></stop>
        <stop offset="50%" stop-opacity="0.3" style="stop-color:#5e64ff;"></stop>
        <stop offset="100%" stop-opacity="0.1" style="stop-color:#5e64ff;"></stop>
      </linearGradient>
    </defs>
    <g transform="translate(9.6, 3.2)" class="md-chart-graph">
      <g class="md-chart-axis-y">
        <g transform="translate(0, 0)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">60%</text>
        </g>
        <g transform="translate(0, 10.559999999999999)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">50%</text>
        </g>
        <g transform="translate(0, 21.119999999999997)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">40%</text>
        </g>
        <g transform="translate(0, 31.679999999999996)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">30%</text>
        </g>
        <g transform="translate(0, 42.239999999999995)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">20%</text>
        </g>
        <g transform="translate(0, 52.8)">
          <line x1="0" x2="99.2" y1="0" y2="0"></line> <text x="0" y="0" dx="-0.5em" dy="0.32em">0%</text>
        </g>
      </g>
      <g transform="translate(0, 52.8)" class="md-chart-axis-x">
        <g transform="translate(0, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周一</text>
        </g>
        <g transform="translate(16.533333333333335, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周二</text>
        </g>
        <g transform="translate(33.06666666666667, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周三</text>
        </g>
        <g transform="translate(49.60000000000001, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周四</text>
        </g>
        <g transform="translate(66.13333333333334, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周五</text>
        </g>
        <g transform="translate(82.66666666666667, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周六</text>
        </g>
        <g transform="translate(99.20000000000002, 0)">
          <line x1="0" x2="0" y1="0" y2="6"></line> <text x="0" y="0" dy="2em">周日</text>
        </g>
      </g>
      <g class="md-chart-paths">
        <path d="M0,48.576 L8.266666666666667,44.879999999999995 L16.533333333333335,42.239999999999995 L24.800000000000004,39.071999999999996 L33.06666666666667,42.239999999999995 L41.333333333333336,31.679999999999996 L49.60000000000001,29.567999999999994 L57.866666666666674,23.232 L66.13333333333334,25.343999999999998 L74.4,21.119999999999997 L82.66666666666667,10.559999999999999 L90.93333333333334,5.279999999999999 L99.20000000000002,8.447999999999997" class="md-chart-path" style="fill:none;stroke:#5e64ff;stroke-width:1;"></path>
        <!---->
        <path d="M0,47.519999999999996 L8.266666666666667,42.239999999999995 L16.533333333333335,36.959999999999994 L24.800000000000004,31.679999999999996 L33.06666666666667,33.791999999999994 L41.333333333333336,26.4 L49.60000000000001,23.232 L57.866666666666674,19.007999999999996 L66.13333333333334,21.119999999999997 L74.4,21.119999999999997 L82.66666666666667,15.839999999999998 L90.93333333333334,19.007999999999996 L99.20000000000002,15.839999999999998" class="md-chart-path" style="fill:none;stroke:#fa8919;stroke-width:1;"></path>
        <!---->
      </g>
    </g>
  </svg></div>
`;
